GNOME Bugzilla – Bug 734475
imagefreeze: Unref pad template caps after usage
Last modified: 2014-08-08 19:20:49 UTC
gst_pad_get_pad_template_caps() returns a reference to a caps object that needs to be unreffed after usage. This patch fixes the issue.
Created attachment 282895 [details] [review] Proposed patch fixing template caps leak.
master: commit c85ae43a6e0545858e25541075d662ec847476d3 Author: Sebastian Rasmussen <sebras@hotmail.com> Date: Fri Aug 8 12:40:49 2014 +0200 imagefreeze: Unref pad template caps after usage Fixes https://bugzilla.gnome.org/show_bug.cgi?id=734475 1.4: commit 4f62408a3cf1f23b3c4999a53863cda3e15f5628 Author: Sebastian Rasmussen <sebras@hotmail.com> Date: Fri Aug 8 12:40:49 2014 +0200 imagefreeze: Unref pad template caps after usage Fixes https://bugzilla.gnome.org/show_bug.cgi?id=734475