imagefreeze: Unref pad template caps after usage

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=734475